# exo

./: .gitignore  .travis.yml  ALEX.project  ALEX_APP  ActuatedJoint_8cpp.html  ActuatedJoint_8cpp__incl.map  ActuatedJoint_8cpp__incl.md5  ActuatedJoint_8cpp_source.html  ActuatedJoint_8h.html  ActuatedJoint_8h__dep__incl.map  ActuatedJoint_8h__dep__incl.md5  ActuatedJoint_8h__incl.map  ActuatedJoint_8h__incl.md5  ActuatedJoint_8h_source.html  Buttons_8cpp.html  Buttons_8cpp__incl.map  Buttons_8cpp__incl.md5  Buttons_8cpp_source.html  Buttons_8h.html  Buttons_8h__dep__incl.map  Buttons_8h__dep__incl.md5  Buttons_8h__incl.map  Buttons_8h__incl.md5  Buttons_8h_source.html  CO__comm__helpers_8c.html  CO__comm__helpers_8c__incl.map  CO__comm__helpers_8c__incl.md5  CO__comm__helpers_8c_source.html  CO__comm__helpers_8h.html  CO__comm__helpers_8h__dep__incl.map  CO__comm__helpers_8h__dep__incl.md5  CO__comm__helpers_8h__incl.map  CO__comm__helpers_8h__incl.md5  CO__comm__helpers_8h_source.html  CO__command_8c.html  CO__command_8c__incl.map  CO__command_8c__incl.md5  CO__command_8c_source.html  CO__command_8h.html  CO__command_8h__dep__incl.map  (+459 more)
ALEX/: ALEX.project  ALEX_APP  CMakeLists.txt  EXO_APP  EXO_APP_2  EXO_APP_4CMSTEP  EXO_APP_Crutch  EXO_APP_JC  EXO_APP_SAM  EXO_APP_SAM_NOUPDATE  EXO_APP_WILL  Makefile  bbbxc
ALEX/ALEX/: ALEX.project
ALEX/Startup/: File Locations.txt  X2homeCal.sh  resetTrackingError.sh
ALEX/TaskStatemachine/: Arc.cpp  Arc.h  Event.h  State.h  StateMachine.cpp  StateMachine.h  Supervisor.cpp  ToyMachine.h  Transition.cpp
ALEX/canopend/: ALEX  Joint.cpp  Makefile  X2_log.txt  main.cpp
ALEX/canopend/app/: canopend
ALEX/canopend/objDict/: CO_ODtest.h
ALEX/canopend/src/: CO_command.c  CO_command.h  cleanmain.c  main.cpp
ALEX/hw/: main.cpp  pinread.cpp
ALEX/robot/: Joint.cpp  Joint.h  Robot.h  TESTING.cpp
ALEX/src/: application.cpp  application.h  main.cpp
ALEX/src/objDict/: CO_OD.c  CO_OD.h
ALEX/src/robot/: Buttons.cpp  Buttons.h  Joint.cpp  Joint.h  Robot.cpp  Robot.h  Trajectory.cpp  Trajectory.h  spline.cpp
ALEX/src/spdlog/: logUtilities.cpp  logUtilities.h
ALEX/src/stateMachine/: InitState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  exoStateMachine.cpp  exoStateMachine.h  sitStand.cpp  sitStand.h
ALEX/src/stateMachine/sitStand/: ErrorState.cpp  ErrorState.h  InitState.cpp  InitState.h  LeftForward.cpp  RightForward.cpp  RightForward.h  Sitting.cpp  Sitting.h  SittingDwn.cpp  SittingDwn.h  Standing.cpp  Standing.h  StandingUp.cpp  StandingUp.h  SteppingFirstLeft.cpp  SteppingFirstLeft.h  SteppingLastLeft.cpp  SteppingLastLeft.h  SteppingLastRight.cpp  SteppingLastRight.h  SteppingLeft.cpp  SteppingLeft.h  SteppingRight.cpp  SteppingRight.h  sitStand.cpp
ALEX/src/stateMachine/states/: ErrorState.cpp  ErrorState.h  InitState.cpp  LeftForward.cpp  RightForward.cpp  RightForward.h  Sitting.cpp  SittingDwn.cpp  StairLeftLegUp.cpp  (+21 more)
ALEX/stateMachine/: StateMachine.cpp  StateMachine.h  Toy.cpp  Toy.h  ToyMachine.cpp  ToyMachine.h
(+9231 files in other folders)
